--- a/apps/web/src/components/modules/ArticleGalleryModule.astro
+++ b/apps/web/src/components/modules/ArticleGalleryModule.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import SanityImage from "@/components/astro/SanityImage.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
 import SectionLayout from "@/layouts/SectionLayout.astro";
@@ -36,4 +36,4 @@ if (!images?.length) return null;
 			}
 		</div>
 	</MainLayout>
-</SectionLayout>
+</SectionLayout> -->
