--- a/apps/web/src/components/modules/ArticleQuoteModule.astro
+++ b/apps/web/src/components/modules/ArticleQuoteModule.astro
@@ -1,8 +1,6 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
-import ArticleLayout from "@/layouts/ArticleLayout.astro";
-import MainLayout from "@/layouts/MainLayout.astro";
-import SectionLayout from "@/layouts/SectionLayout.astro";
+import CaseLayout from "@/layouts/CaseLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
 
 type Props = ModuleProps<"articleQuoteModule">;
@@ -12,29 +10,27 @@ const { quote, author, jobTitle, image } = Astro.props;
 if (!quote) return null;
 ---
 
-<SectionLayout>
-	<ArticleLayout>
-		<blockquote class="quote pb-[2rem]">
-			“{quote}”
-		</blockquote>
-		{
-			author && (
-				<div class="grid grid-cols-4 gap-[1rem]">
-					<div class="col-span-1">
-						<SanityImage
-							image={image}
-							alt={author}
-							width={1200}
-							class="rounded-[0.5rem] object-cover w-full h-full"
-							sizes="(min-width: 1280px) 1200px, 100vw"
-						/>
-					</div>
-					<div class="paragraph-secondary col-span-3">
-						<span class="font-bold">{author}</span>
-						{jobTitle && <p>{jobTitle}</p>}
-					</div>
+<CaseLayout>
+	<blockquote class="quote pb-[2rem]">
+		“{quote}”
+	</blockquote>
+	{
+		author && (
+			<div class="grid grid-cols-4 gap-[1rem]">
+				<div class="col-span-1">
+					<SanityImage
+						image={image}
+						alt={author}
+						width={1200}
+						class="rounded-[0.5rem] object-cover w-full h-full"
+						sizes="(min-width: 1280px) 1200px, 100vw"
+					/>
 				</div>
-			)
-		}
-	</ArticleLayout>
-</SectionLayout>
+				<div class="paragraph-secondary col-span-3">
+					<span class="font-bold">{author}</span>
+					{jobTitle && <p>{jobTitle}</p>}
+				</div>
+			</div>
+		)
+	}
+</CaseLayout>
