--- a/apps/web/src/components/modules/ArticleRelatedCasesModule.astro
+++ b/apps/web/src/components/modules/ArticleRelatedCasesModule.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import MainLayout from "@/layouts/MainLayout.astro";
 import SectionLayout from "@/layouts/SectionLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
@@ -33,4 +33,4 @@ if (!cases?.length) return null;
 			</div>
 		</section>
 	</MainLayout>
-</SectionLayout>
+</SectionLayout> -->
