--- a/apps/web/src/components/modules/ArticleStatsModule.astro
+++ b/apps/web/src/components/modules/ArticleStatsModule.astro
@@ -1,6 +1,5 @@
 ---
-import ArticleLayout from "@/layouts/ArticleLayout.astro";
-import SectionLayout from "@/layouts/SectionLayout.astro";
+import CaseLayout from "@/layouts/CaseLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
 import StatsListItem from "@/components/astro/StatsListItem.astro";
 
@@ -11,20 +10,18 @@ const { project, title, stats } = Astro.props;
 if (!stats?.length) return null;
 ---
 
-<SectionLayout>
-	<ArticleLayout>
-		<div
-			class="p-[1.25rem] md:pl-[1.75rem] bg-[hsla(200,50%,83%,0.25)] rounded-[0.5rem] col-span-4 md:col-span-6 md:col-start-4"
+<CaseLayout>
+	<div
+		class="p-[1.25rem] md:pl-[1.75rem] bg-[hsla(200,50%,83%,0.25)] rounded-[0.5rem] col-span-4 md:col-span-6 md:col-start-4"
+	>
+		<h4
+			class="text-[1.5rem] md:text-[1.75rem] leading-[115%] pb-[4rem] md:pb-[3rem]"
 		>
-			<h4
-				class="text-[1.5rem] md:text-[1.75rem] leading-[115%] pb-[4rem] md:pb-[3rem]"
-			>
-				<span class="font-bold">{project}</span>{title}
-			</h4>
+			<span class="font-bold">{project}</span>{title}
+		</h4>
 
-			<ul class="list-disc pl-[1rem]">
-				{stats.map((s) => <StatsListItem text={s} />)}
-			</ul>
-		</div>
-	</ArticleLayout>
-</SectionLayout>
+		<ul class="list-disc pl-[1rem]">
+			{stats.map((s) => <StatsListItem text={s} />)}
+		</ul>
+	</div>
+</CaseLayout>
