--- a/apps/web/src/components/modules/NewsModule.astro
+++ b/apps/web/src/components/modules/NewsModule.astro
@@ -1,70 +1,66 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
-import MainLayout from "@/layouts/MainLayout.astro";
-import SectionLayout from "@/layouts/SectionLayout.astro";
+import LandingLayout from "@/layouts/LandingLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
 
 type Props = ModuleProps<"newsModule">;
+
+console.log(Astro.props);
 
 const { title, newsItems } = Astro.props;
 
 if (!newsItems?.length) return null;
 ---
 
-<SectionLayout>
-	<MainLayout>
-		{
-			newsItems.map((newsItem) => (
-				<>
-					<div class="col-span-4 md:col-span-6">
-						<figcaption class="headline-extralight">{title}</figcaption>
-						<h3 class="headline-semibold pb-[2rem]">{newsItem.title}</h3>
-						<p class="paragraph-main">
-							{newsItem.excerpt}
-							{newsItem.link && (
-								<a href={newsItem.link} class="text-novo-blue">
-									Read more
-								</a>
-							)}
-						</p>
-					</div>
-					{newsItem.image && (
-						<div class="relative rounded-[0.5rem] col-span-4 md:col-span-6">
-							<SanityImage
-								image={newsItem.image}
-								alt={newsItem.title ?? ""}
-								width={1200}
-								class="w-full h-auto rounded-[0.5rem]"
-								sizes="(min-width: 1280px) 1200px, 100vw"
-							/>
-							{newsItem.link && (
-								<button
-									type="button"
-									class="text-white backdrop-blur-xl rounded-[0.5rem] py-[0.875rem] pl-[1rem] pr-[1.5rem] font-medium text-[1.125rem] leading-[140%] tracking-[1%] absolute left-[1.25rem] bottom-[1.25rem]"
-								>
-									<a
-										class="flex items-center gap-[0.5rem]"
-										href={newsItem.link}
+<LandingLayout>
+	{
+		newsItems.map((newsItem) => (
+			<>
+				<div class="col-span-4 md:col-span-6">
+					<figcaption class="headline-extralight">{title}</figcaption>
+					<h3 class="headline-semibold pb-[2rem]">{newsItem.title}</h3>
+					<p class="paragraph-main">
+						{newsItem.excerpt}
+						{newsItem.link && (
+							<a href={newsItem.link} class="text-novo-blue">
+								Read more
+							</a>
+						)}
+					</p>
+				</div>
+				{newsItem.image && (
+					<div class="relative rounded-[0.5rem] col-span-4 md:col-span-6">
+						<SanityImage
+							image={newsItem.image}
+							alt={newsItem.title ?? ""}
+							width={1200}
+							class="w-full h-auto rounded-[0.5rem]"
+							sizes="(min-width: 1280px) 1200px, 100vw"
+						/>
+						{newsItem.link && (
+							<button
+								type="button"
+								class="text-white backdrop-blur-xl rounded-[0.5rem] py-[0.875rem] pl-[1rem] pr-[1.5rem] font-medium text-[1.125rem] leading-[140%] tracking-[1%] absolute left-[1.25rem] bottom-[1.25rem]"
+							>
+								<a class="flex items-center gap-[0.5rem]" href={newsItem.link}>
+									<svg
+										xmlns="http://www.w3.org/2000/svg"
+										width="32"
+										height="32"
+										viewBox="0 0 24 24"
 									>
-										<svg
-											xmlns="http://www.w3.org/2000/svg"
-											width="32"
-											height="32"
-											viewBox="0 0 24 24"
-										>
-											<path
-												fill="currentColor"
-												d="M6.4 18L5 16.6L14.6 7H6V5h12v12h-2V8.4z"
-											/>
-										</svg>
-										Watch Video (2:00)
-									</a>
-								</button>
-							)}
-						</div>
-					)}
-				</>
-			))
-		}
-	</MainLayout>
-</SectionLayout>
+										<path
+											fill="currentColor"
+											d="M6.4 18L5 16.6L14.6 7H6V5h12v12h-2V8.4z"
+										/>
+									</svg>
+									Watch Video (2:00)
+								</a>
+							</button>
+						)}
+					</div>
+				)}
+			</>
+		))
+	}
+</LandingLayout>
