--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -76,7 +76,8 @@
 	@apply font-sans font-semibold text-[1.75rem] leading-[115%] tracking-[-1%] md:text-[2.625rem];
 }
 
-.headline-sub {
+.headline-sub,
+.article-text h2 {
 	@apply font-sans font-extralight text-[1.5rem] leading-[120%] md:text-[2.25rem];
 }
 
@@ -84,8 +85,13 @@
 	@apply font-sans text-[1.25rem] leading-[120%] md:text-[1.75rem] md:leading-[110%];
 }
 
-.paragraph-article {
+.paragraph-article,
+.article-text p {
 	@apply font-sans text-[1rem] leading-[140%] md:text-[1.25rem];
+}
+
+.article-text h3 {
+	@apply font-sans font-bold text-[1rem] leading-[140%] md:text-[1.25rem];
 }
 
 .paragraph-secondary {
