--- a/apps/web/src/components/modules/HighlightsModule.astro
+++ b/apps/web/src/components/modules/HighlightsModule.astro
@@ -16,7 +16,7 @@ const validHighlights = highlights.filter(
 ---
 
 <LandingLayout>
-	<h3 class="headline-extralight pb-[2.5rem] col-span-full">
+	<h3 class="headline-extralight mb-[0.5rem] md:mb-[1.5rem] col-span-full">
 		{title}
 	</h3>
 	{
