--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -7,27 +7,33 @@ interface Props {
 }
 ---
 
-<footer
-	class="bg-novo-blue text-white w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem] pb-[1.5rem] md:pb-[2.5rem] mt-[7.5rem] md:mt-[12.5rem]"
->
-	<div class="max-w-[100rem] flex justify-between items-start">
-		<div class="text-[2rem] md:text-[4rem] leading-[90%]">
-			<p>novo<br /><span class="font-bold">nordisk</span></p>
+<footer class="bg-novo-blue text-white w-full">
+	<div
+		class="max-w-[100rem] mx-auto w-full grid gap-[12.5rem] py-[1rem] px-[1.5rem] md:px-[3rem] pb-[1.5rem] md:pb-[2.5rem]"
+	>
+		<div class="flex justify-between items-start">
+			<div class="text-[2rem] md:text-[4rem] leading-[90%]">
+				<p>novo<br /><span class="font-bold">nordisk</span></p>
+			</div>
+			<PrimaryButton
+				buttonText="Back to Main Site"
+				link="/"
+				textColor="white"
+			/>
 		</div>
-		<PrimaryButton buttonText="Back to Main Site" link="/" textColor="white" />
-	</div>
 
-	<nav>
-		<ul
-			class="max-w-[100rem] grid md:flex gap-[1rem] md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
-		>
-			<li>Privacy notice</li>
-			<li>Code of Conduct</li>
-			<li>Whistleblower</li>
-			<li>Articles of association</li>
-			<li>Policy on data ethics</li>
-			<li>Electronic invoicing</li>
-			<li>Diversity policy</li>
-		</ul>
-	</nav>
+		<nav>
+			<ul
+				class="max-w-[100rem] grid md:flex gap-[1rem] md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
+			>
+				<li>Privacy notice</li>
+				<li>Code of Conduct</li>
+				<li>Whistleblower</li>
+				<li>Articles of association</li>
+				<li>Policy on data ethics</li>
+				<li>Electronic invoicing</li>
+				<li>Diversity policy</li>
+			</ul>
+		</nav>
+	</div>
 </footer>
