--- a/apps/web/src/components/astro/HeroCase.astro
+++ b/apps/web/src/components/astro/HeroCase.astro
@@ -1,25 +1,29 @@
 ---
 import SanityImage from "@/components/astro/SanityImage.astro";
 import MainLayout from "@/layouts/MainLayout.astro";
-import SectionLayout from "@/layouts/SectionLayout.astro";
 import type { ModuleProps } from "@/scripts/types";
+import { formatYear } from "@/utils/formatDate";
 
 const { title, heroImage, project, startDate, endDate } = Astro.props;
+
+console.log("HERO CASE");
 ---
 
-<SectionLayout>
-	<MainLayout>
-		<section class="col-span-full">
-			<p
-				class="flex gap-[1rem] md:gap-[1.5rem] items-center pb-[0.5rem] md:pb-[0.75rem] paragraph-secondary"
+<MainLayout>
+	<section class="col-span-full">
+		<p
+			class="flex gap-[1rem] md:gap-[1.5rem] items-center pb-[0.5rem] md:pb-[0.75rem] paragraph-secondary text-novo-blue"
+		>
+			<span>{project}</span>
+			<span
+				>{formatYear(startDate ?? undefined)} - {
+					formatYear(endDate ?? undefined)
+				}</span
 			>
-				<span>{project}</span>
-				<span>{startDate} - {endDate}</span>
-			</p>
-			<h1 class="headline-article pb-[2rem] md:pb-[3rem]">{title}</h1>
-			<div class="overflow-hidden pb-[2rem] md:pb-[3rem]">
-				<SanityImage class="rounded-[0.5rem]" image={heroImage} alt={title} />
-			</div>
-		</section>
-	</MainLayout>
-</SectionLayout>
+		</p>
+		<h1 class="headline-article pb-[2rem] md:pb-[3rem]">{title}</h1>
+		<div class="overflow-hidden pb-[2rem] md:pb-[3rem]">
+			<SanityImage class="rounded-[0.5rem]" image={heroImage} alt={title} />
+		</div>
+	</section>
+</MainLayout>
