--- a/apps/web/src/components/modules/CaseHighlightsModule.astro
+++ b/apps/web/src/components/modules/CaseHighlightsModule.astro
@@ -11,7 +11,9 @@ if (!cases?.length) return null;
 ---
 
 <LandingLayout>
-	<h3 class="headline-extralight pb-[2.5rem] col-span-full">{title}</h3>
+	<h3 class="headline-extralight mb-[0.5rem] md:mb-[1.5rem] col-span-full">
+		{title}
+	</h3>
 
 	{
 		cases.map((c) => (
