--- a/apps/web/src/layouts/ArticleLayout.astro
+++ b/apps/web/src/layouts/ArticleLayout.astro
@@ -1,4 +1,4 @@
----
+<!-- ---
 import MainLayout from "./MainLayout.astro";
 ---
 
@@ -8,4 +8,4 @@ import MainLayout from "./MainLayout.astro";
 	>
 		<slot />
 	</div>
-</MainLayout>
+</MainLayout> -->
