--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -78,7 +78,7 @@
 
 .headline-sub,
 .article-text h2 {
-	@apply font-sans font-extralight text-[1.5rem] leading-[120%] md:text-[2.25rem];
+	@apply font-sans font-extralight text-[1.5rem] leading-[120%] md:text-[2.25rem] pb-[2rem] md:pb-[3rem];
 }
 
 .headline-card {
@@ -87,7 +87,7 @@
 
 .paragraph-article,
 .article-text p {
-	@apply font-sans text-[1rem] leading-[140%] md:text-[1.25rem];
+	@apply font-sans text-[1rem] leading-[140%] md:text-[1.25rem] pb-[1lh] last:pb-[0];
 }
 
 .article-text h3 {
