--- a/apps/web/src/components/astro/Header.astro
+++ b/apps/web/src/components/astro/Header.astro
@@ -7,7 +7,7 @@ interface Props {
 }
 ---
 
-<header class="w-full py-[1rem] mb-[6rem] sticky top-0 bg-white">
+<header class="w-full py-[1rem] mb-[6rem] sticky top-0 bg-white z-50">
 	<nav
 		class="max-w-[100rem] flex justify-between items-start mx-auto px-[1.5rem] md:px-[3rem]"
 	>
