--- a/apps/web/src/components/modules/AtAGlanceModule.astro
+++ b/apps/web/src/components/modules/AtAGlanceModule.astro
@@ -5,16 +5,95 @@ import type { ModuleProps } from "@/scripts/types";
 type Props = ModuleProps<"atAGlanceModule">;
 ---
 
+<script
+	src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"
+></script>
+
 <LandingLayout>
 	<div class="col-span-4 md:col-span-6">
 		<h2 class="headline-01">Novo Holdings at a Glance</h2>
 	</div>
 	<section class="col-span-4 md:col-span-6 grid md:grid-cols-2 gap-[1rem]">
-		<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] h-[12rem]"></div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Briefcase_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Coin_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Cubes_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Globe_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Map_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/MoneyBag_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Pig_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Pyramid_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
+		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+			<lottie-player
+				src="/animations/Target_02.json"
+				background="transparent"
+				speed="1"
+				style="width: 100%; height: auto;"
+				loop
+				autoplay></lottie-player>
+		</div>
 	</section>
 </LandingLayout>
