--- a/apps/web/src/components/modules/AtAGlanceModule.astro
+++ b/apps/web/src/components/modules/AtAGlanceModule.astro
@@ -14,7 +14,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 		<h2 class="headline-01">Novo Holdings at a Glance</h2>
 	</div>
 	<section class="col-span-4 md:col-span-6 grid md:grid-cols-2 gap-[1rem]">
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Briefcase_02.json"
 				background="transparent"
@@ -23,7 +23,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Coin_02.json"
 				background="transparent"
@@ -32,7 +32,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Cubes_02.json"
 				background="transparent"
@@ -41,7 +41,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Globe_02.json"
 				background="transparent"
@@ -50,7 +50,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Map_02.json"
 				background="transparent"
@@ -59,7 +59,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/MoneyBag_02.json"
 				background="transparent"
@@ -68,7 +68,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Pig_02.json"
 				background="transparent"
@@ -77,7 +77,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Pyramid_02.json"
 				background="transparent"
@@ -86,7 +86,7 @@ type Props = ModuleProps<"atAGlanceModule">;
 				loop
 				autoplay></lottie-player>
 		</div>
-		<div class="w-full bg-sky-blue rounded-[0.5rem] overflow-hidden">
+		<div class="w-full bg-[#B2B7CD] rounded-[0.5rem] overflow-hidden">
 			<lottie-player
 				src="/animations/Target_02.json"
 				background="transparent"
