feature: footer+header styling. carousel buttons.

--- a/apps/web/src/components/astro/Header.astro
+++ b/apps/web/src/components/astro/Header.astro
@@ -12,7 +12,7 @@ interface Props {
 		class="max-w-[100rem] flex justify-between items-start mx-auto px-[1.5rem] md:px-[3rem]"
 	>
 		<p class="text-[1.125rem] leading-[90%] text-novo-blue">
-			novo<br /><span class="font-bold">nordisk</span>
+			novo<br /><span class="font-bold">holdings</span>
 		</p>
 		<PrimaryButton
 			buttonText="Download Report"
