--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -18,7 +18,7 @@ interface Props {
 			<PrimaryButton
 				buttonText="Back to Main Site"
 				link="/"
-				textColor="white"
+				icon="arrow_outward"
 			/>
 		</div>
 
