feature: Work on Lottie player

--- a/apps/web/src/components/astro/HighlightsModule.astro
+++ b/apps/web/src/components/astro/HighlightsModule.astro
@@ -4,7 +4,7 @@
 
 <section>
 	<h3 class="headline-extralight pb-[2.5rem]">Explore our Report</h3>
-	<div class="grid grid-cols-4 gap-[1rem] md:grid-cols-12">
+	<div class="grid grid-cols-4 gap-4 md:grid-cols-12">
 		<slot />
 		<!-- <CaseCard
 			collaborator=""
