--- a/apps/web/src/components/modules/ArticleQuoteModule.astro
+++ b/apps/web/src/components/modules/ArticleQuoteModule.astro
@@ -16,13 +16,13 @@ if (!quote) return null;
 	</blockquote>
 	{
 		author && (
-			<div class="grid grid-cols-4 gap-[1rem]">
+			<div class="grid grid-cols-4 gap-4">
 				<div class="col-span-1">
 					<SanityImage
 						image={image}
 						alt={author}
 						width={1200}
-						class="rounded-[0.5rem] object-cover w-full h-full"
+						class="rounded-lg object-cover w-full h-full"
 						sizes="(min-width: 1280px) 1200px, 100vw"
 					/>
 				</div>
