--- a/apps/web/src/components/modules/ArticleStatsModule.astro
+++ b/apps/web/src/components/modules/ArticleStatsModule.astro
@@ -11,7 +11,7 @@ if (!stats?.length) return null;
 
 <CaseLayout>
 	<div
-		class="p-[1.25rem] md:pl-[1.75rem] bg-[hsla(200,50%,83%,0.25)] rounded-[0.5rem] col-span-4 md:col-span-6 md:col-start-4"
+		class="p-[1.25rem] md:pl-[1.75rem] bg-[hsla(200,50%,83%,0.25)] rounded-lg col-span-4 md:col-span-6 md:col-start-4"
 	>
 		<h4
 			class="text-[1.5rem] md:text-[1.75rem] leading-[115%] pb-[4rem] md:pb-[3rem]"
