--- a/apps/web/src/components/astro/CardSummary.astro
+++ b/apps/web/src/components/astro/CardSummary.astro
@@ -3,7 +3,7 @@ const { collaborator, title } = Astro.props;
 ---
 
 <figure
-	class="bg-sky-blue opacity-25 rounded-[0.5rem] py-[1.25rem] px-[1.25rem] md:px-[1.75rem]"
+	class="bg-sky-blue opacity-25 rounded-lg py-[1.25rem] px-[1.25rem] md:px-[1.75rem]"
 >
 	<figcaption class="headline-card">
 		<span class="font-bold">{collaborator}</span>{title}
