--- a/apps/web/src/components/astro/Footer.astro
+++ b/apps/web/src/components/astro/Footer.astro
@@ -24,7 +24,7 @@ interface Props {
 
 		<nav>
 			<ul
-				class="max-w-[100rem] grid md:flex gap-[1rem] md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
+				class="max-w-[100rem] grid md:flex gap-4 md:gap-[2rem] font-medium text-[0.875rem] leading-[120%]"
 			>
 				<li>Privacy notice</li>
 				<li>Code of Conduct</li>
