--- a/apps/web/src/components/astro/HeroCase.astro
+++ b/apps/web/src/components/astro/HeroCase.astro
@@ -9,7 +9,7 @@ const { title, heroImage, project, startDate, endDate } = Astro.props;
 <MainLayout>
 	<section class="col-span-full">
 		<p
-			class="flex gap-[1rem] md:gap-[1.5rem] items-center pb-[0.5rem] md:pb-[0.75rem] paragraph-secondary text-novo-blue"
+			class="flex gap-4 md:gap-[1.5rem] items-center pb-[0.5rem] md:pb-[0.75rem] paragraph-secondary text-novo-blue"
 		>
 			<span>{project}</span>
 			<span
@@ -20,7 +20,7 @@ const { title, heroImage, project, startDate, endDate } = Astro.props;
 		</p>
 		<h1 class="headline-article pb-[2rem] md:pb-[3rem]">{title}</h1>
 		<div class="overflow-hidden pb-[2rem] md:pb-[3rem]">
-			<SanityImage class="rounded-[0.5rem]" image={heroImage} alt={title} />
+			<SanityImage class="rounded-lg" image={heroImage} alt={title} />
 		</div>
 	</section>
 </MainLayout>
