--- a/apps/web/src/components/modules/NewsModule.astro
+++ b/apps/web/src/components/modules/NewsModule.astro
@@ -16,9 +16,9 @@ const { caption, title, description, videoUrl } = Astro.props;
 		<p class="paragraph-main pb-[3rem]">{description}</p>
 	</div>
 	<div class="col-span-4 md:col-span-6 relative">
-		<video class="rounded-[0.5rem]" src={videoUrl}></video>
+		<video class="rounded-lg" src={videoUrl}></video>
 		<button
-			class="absolute rounded-[0.5rem] left-[1.25rem] bottom-[1.25rem] pl-[1rem] pr-[1.5rem] py-[0.875rem] bg-white"
+			class="absolute rounded-lg left-[1.25rem] bottom-[1.25rem] pl-[1rem] pr-[1.5rem] py-[0.875rem] bg-white"
 			>test</button
 		>
 	</div>
