--- a/apps/web/src/components/modules/AtAGlanceModule.astro
+++ b/apps/web/src/components/modules/AtAGlanceModule.astro
@@ -22,7 +22,7 @@ const animations = Object.entries(
 		Novo Holdings at a Glance
 	</h2>
 	<section class="add-a-glance-section col-span-full">
-		<LottieGrid animations={animations} client:load />
+		<LottieGrid {animations} client:load />
 	</section>
 </LandingLayout>
 
