--- a/apps/web/src/components/modules/NewsModule.astro
+++ b/apps/web/src/components/modules/NewsModule.astro
@@ -4,7 +4,7 @@ import type { ModuleProps } from "@/scripts/types";
 
 type Props = ModuleProps<"newsModule">;
 
-const { caption, title, description, videoUrl } = Astro.props;
+const { caption, title, description, video } = Astro.props;
 ---
 
 <LandingLayout>
@@ -16,7 +16,7 @@ const { caption, title, description, videoUrl } = Astro.props;
 		<p class="paragraph-main pb-[3rem]">{description}</p>
 	</div>
 	<div class="col-span-4 md:col-span-6 relative">
-		<video class="rounded-lg" src={videoUrl}></video>
+		<video class="rounded-lg" src={video?.asset?.url}></video>
 		<button
 			class="absolute rounded-lg left-[1.25rem] bottom-[1.25rem] pl-[1rem] pr-[1.5rem] py-[0.875rem] bg-white"
 			>test</button
