--- a/apps/web/src/styles/global.css
+++ b/apps/web/src/styles/global.css
@@ -3,10 +3,28 @@
 @font-face {
 	font-family: "Novo Apply Sans";
 	src:
+		local("Novo Apply Sans Thin"),
+		url("/fonts/NovoApplySans-Th.woff2") format("woff2");
+	font-weight: 100;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Novo Apply Sans";
+	src:
 		local("Novo Apply Sans Extralight"),
 		url("/fonts/NovoApplySans-Xl.woff2") format("woff2");
 	font-weight: 200;
 	font-style: normal;
+}
+
+@font-face {
+	font-family: "Novo Apply Sans";
+	src:
+		local("Novo Apply Sans Extralight Italic"),
+		url("/fonts/NovoApplySans-XlIt.woff2") format("woff2");
+	font-weight: 200;
+	font-style: italic;
 }
 
 @font-face {
@@ -30,6 +48,15 @@
 @font-face {
 	font-family: "Novo Apply Sans";
 	src:
+		local("Novo Apply Sans Italic"),
+		url("/fonts/NovoApplySans-It.woff2") format("woff2");
+	font-weight: 400;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Novo Apply Sans";
+	src:
 		local("Novo Apply Sans Medium"),
 		url("/fonts/NovoApplySans-Md.woff2") format("woff2");
 	font-weight: 500;
@@ -45,6 +72,33 @@
 	font-style: normal;
 }
 
+@font-face {
+	font-family: "Novo Apply Sans";
+	src:
+		local("Novo Apply Sans Bold Italic"),
+		url("/fonts/NovoApplySans-BdIt.woff2") format("woff2");
+	font-weight: 700;
+	font-style: italic;
+}
+
+@font-face {
+	font-family: "Novo Apply Sans";
+	src:
+		local("Novo Apply Sans Extrabold"),
+		url("/fonts/NovoApplySans-Xb.woff2") format("woff2");
+	font-weight: 800;
+	font-style: normal;
+}
+
+@font-face {
+	font-family: "Novo Apply Sans";
+	src:
+		local("Novo Apply Sans Extrabold Italic"),
+		url("/fonts/NovoApplySans-XbIt.woff2") format("woff2");
+	font-weight: 800;
+	font-style: italic;
+}
+
 @theme {
 	--font-sans:
 		"Novo Apply Sans", ui-sans-serif, system-ui, -apple-system,
@@ -58,6 +112,7 @@
 	--color-warm-sand: #d3b276;
 	--color-sky-blue: #b5d5e6;
 	--color-seafoam-green: #6dc28d;
+	--color-light-blue: #b2b7cd;
 }
 
 .site-grid {
