--- a/apps/web/src/components/astro/Icon.astro
+++ b/apps/web/src/components/astro/Icon.astro
@@ -4,14 +4,15 @@ import type { Icon as IconType } from "@novo-holdings-annual-report-2024/lib";
 interface Props {
 	icon?: IconType | null;
 	title?: string;
+	class?: string;
 }
 
-const { icon, title } = Astro.props;
+const { icon, title, class: className } = Astro.props;
 ---
 
 {
 	icon && (
-		<svg xmlns="http://www.w3.org/2000/svg" data-icon={icon}>
+		<svg xmlns="http://www.w3.org/2000/svg" data-icon={icon} class={className}>
 			<title>{title ?? icon}</title>
 			<use href={`/api/icons.svg#${icon}`} />
 		</svg>
