--- a/apps/web/src/layouts/PageLayout.astro
+++ b/apps/web/src/layouts/PageLayout.astro
@@ -36,6 +36,7 @@ const pageTitle =
 			<slot />
 		</main>
 		<Footer settings={settings} />
+		<div id="portal" class="z-2 absolute w-0 h-0"></div>
 	</body>
 </html>
 
