--- a/apps/web/src/components/astro/SanityImage.astro
+++ b/apps/web/src/components/astro/SanityImage.astro
@@ -1,12 +1,7 @@
 ---
+import { buildSanityImage } from "@/scripts/image-url-builder";
 import type { SanityImageType } from "@/scripts/types";
-import imageUrlBuilder from "@sanity/image-url";
-import type {
-	ImageUrlBuilderOptions,
-	SanityImageSource,
-} from "@sanity/image-url/lib/types/types";
 import { Image } from "astro:assets";
-import { sanityClient } from "sanity:client";
 
 interface Props {
 	image: SanityImageType;
@@ -20,34 +15,6 @@ interface Props {
 const { image, alt, width, height, class: className, sizes } = Astro.props;
 
 if (!image) return null;
-
-export function buildSanityImage(
-	image: SanityImageSource,
-	options: ImageUrlBuilderOptions = {},
-) {
-	const builder = imageUrlBuilder(sanityClient);
-
-	const {
-		width,
-		height,
-		format = "webp",
-		quality = 80,
-		fit = "crop",
-	} = options;
-
-	let urlBuilder = builder.image(image);
-
-	if (width) urlBuilder = urlBuilder.width(width);
-	if (height) urlBuilder = urlBuilder.height(height);
-	if (typeof image !== "string" && "hotspot" in image) {
-		urlBuilder = urlBuilder
-			.fit(fit)
-			.crop("focalpoint")
-			.focalPoint(image.hotspot.x, image.hotspot.y);
-	}
-
-	return urlBuilder.format(format).quality(quality).url();
-}
 
 const url = buildSanityImage(image, { width, height });
 ---
